# adpit-multiaccdoa-seld

./: .gitignore  README.md  docker-compose.edge.yml  docker-compose.yml  package.json  pnpm-workspace.yaml  pyproject.toml
.cursor/rules/: project-structure.mdc  python-style.mdc  typescript-style.mdc
.github/workflows/: cd-deploy.yml  ci-cloud.yml  ci-edge.yml  ci-frontend.yml  ci-ml-training.yml
cloud/api-gateway/: Dockerfile  pyproject.toml
cloud/api-gateway/src/api_gateway/: __init__.py  config.py  deps.py  main.py
cloud/api-gateway/src/api_gateway/middleware/: auth.py
cloud/api-gateway/src/api_gateway/routers/: bim.py  devices.py  predictions.py  semantic.py  spatial.py  vision.py
cloud/api-gateway/src/api_gateway/websocket/: live_feed.py
cloud/device-service/: Dockerfile  pyproject.toml
cloud/device-service/src/device_service/: __init__.py  cert_manager.py  config.py  grpc_server.py  main.py
cloud/ingestion-service/: Dockerfile  pyproject.toml
cloud/ingestion-service/src/ingestion_service/: __init__.py  config.py  consumer.py  emqx_webhook.py  main.py  writer.py
edge/: Dockerfile  Dockerfile.dev  nanomq.conf  pyproject.toml
edge/src/edge_agent/: __init__.py  config.py  main.py
edge/src/edge_agent/audio/: buffer_manager.py  decimation.py  foa_encoder.py  pdm_capture.py
edge/src/edge_agent/device/: health.py  ota_updater.py
edge/src/edge_agent/features/: feature_pipeline.py  intensity_vectors.py  log_mel.py  salsa.py
edge/src/edge_agent/inference/: model_manager.py  postprocess.py  tensorrt_engine.py
edge/src/edge_agent/transport/: https_client.py  mqtt_publisher.py
frontend/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/alerts/: alert-panel.tsx
frontend/src/components/dashboard/: dashboard-layout.tsx  sidebar.tsx
frontend/src/components/devices/: device-fleet-panel.tsx
frontend/src/components/timeline/: timeline-panel.tsx
frontend/src/components/viewer/: bim-scene.tsx  bim-viewer-panel.tsx
frontend/src/hooks/: use-live-alerts.ts
frontend/src/stores/: twin-store.ts
infra/: Pulumi.dev.yaml  Pulumi.yaml  package.json
infra/src/: index.ts
infra/src/k8s/: emqx.ts  ingress.ts  kafka.ts  monitoring.ts  namespace.ts  postgres.ts  services.ts
libs/seld-common/: pyproject.toml
libs/seld-common/src/seld_common/: __init__.py  audio_utils.py  db.py  mqtt_client.py  schemas.py
migrations/: alembic.ini  env.py  init-extensions.sql
migrations/versions/: 001_init_extensions.py  002_device_registry.py  003_prediction_hypertable.py  004_bim_models.py  005_calibration_matrices.py  006_document_embeddings.py  007_spatial_hits.py
scripts/: build-tensorrt.sh  generate-protos.sh  seed-db.sh  setup-dev.sh
semantic/: Dockerfile  pyproject.toml
semantic/src/semantic_layer/: __init__.py  config.py  document_ingestion.py  embeddings.py  grpc_servicer.py  guardrails.py  llm_orchestrator.py  main.py  prompt_templates.py  vector_search.py
spatial/: Dockerfile  pyproject.toml
spatial/src/spatial_engine/: __init__.py  config.py  grpc_servicer.py  ifc_parser.py  main.py  raycaster.py  roto_translation.py  triangulation.py
tests/: conftest.py  pytest.ini
tests/integration/: test_api_gateway.py  test_e2e_smoke.py
tests/load/: locustfile.py
tests/security/: test_auth.py
tests/unit/: test_guardrails.py  test_homography.py  test_roto_translation.py  test_schemas.py  test_triangulation.py
training/: Dockerfile  pyproject.toml
training/src/seld_training/: __init__.py  train.py
training/src/seld_training/config/: default.yaml
training/src/seld_training/evaluation/: regression_test.py  seld_metrics.py
training/src/seld_training/export/: onnx_export.py  tensorrt_build.py
training/src/seld_training/loss/: __init__.py  adpit_loss.py
training/src/seld_training/model/: __init__.py  conformer_block.py  multi_accdoa_head.py  resnet_conformer.py  se_block.py
vision/: Dockerfile  pyproject.toml
vision/src/vision_fusion/: __init__.py  cctv_pipeline.py  config.py  homography.py  main.py  mobile_mapping.py  state_cache.py  tracker.py
