[project]
name = "seld-edge-agent"
version = "0.1.0"
description = "SELD Edge Agent for Jetson Orin — audio capture, inference, MQTT publish"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "sounddevice>=0.5.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "gmqtt>=0.6.16",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "seld-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["src/edge_agent"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "torch>=2.5.0",
]

[tool.uv.sources]
seld-common = { path = "../libs/seld-common", editable = true }
