[project]
name = "seld-training"
version = "0.1.0"
description = "SELD training pipeline — ResNet-Conformer with ADPIT loss"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "lightning>=2.4.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "wandb>=0.19.0",
    "onnx>=1.17.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "omegaconf>=2.3.0",
    "seld-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["src/seld_training"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]
augmentation = [
    "pyroomacoustics>=0.8.0",
]

[tool.uv.sources]
seld-common = { path = "../libs/seld-common", editable = true }
