[project]
name = "seld-ingestion-service"
version = "0.1.0"
description = "SELD Digital Twin — Kafka consumer → TimescaleDB ingestion"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "seld-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion_service"]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.25.0", "ruff>=0.8.0"]

[tool.uv.sources]
seld-common = { path = "../../libs/seld-common", editable = true }
